<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_title_received"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:textStyle="bold"
            android:text="@string/about"
            android:textSize="32sp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_marginEnd="16dp"
                android:src="@drawable/foto_diri" />
        </FrameLayout>

        <TextView
            android:id="@+id/about_name"
            android:text="@string/about_name"
            style="@style/TextSubTitle"/>

        <TextView
            android:id="@+id/tv_rating_received"
            android:text="@string/about_data_name"
            style="@style/TextSecondary"/>

        <TextView
            android:id="@+id/description"
            android:text="@string/about_email"
            style="@style/TextSubTitle"/>

        <TextView
            android:id="@+id/tv_desc_received"
            android:text="@string/about_data_email"
            style="@style/TextSecondary"/>

    </LinearLayout>
</ScrollView>