<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/img_item_photo"
        android:layout_width="170dp"
        android:layout_height="300dp"
        android:layout_margin="1dp"
        android:layout_gravity="center"
        android:padding="16dp"
        android:scaleType="centerCrop"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tv_item_title"
        android:layout_marginBottom="8dp"
        android:paddingHorizontal="16dp"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:text="@string/movies_title"
        style="@style/TextPrimary"/>

    <TextView
        android:id="@+id/tv_item_description"
        android:paddingHorizontal="16dp"
        android:ellipsize="end"
        android:maxLines="3"
        tools:text="@string/movies_description"
        style="@style/TextPrimary"/>

    <Button
        android:id="@+id/btn_view_more"
        android:text="@string/button"
        style="@style/Button"/>

</LinearLayout>